# clinica-tool

./: .gitignore  AGENT.md  PLANO.md  README.md  vercel.json
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
app/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/__tests__/: LoginPage.test.tsx  OnboardingPage.test.tsx  RequireAuth.test.tsx  date.test.ts  formatBRL.test.ts  hasPermission.test.ts  setup.ts  testUtils.tsx  types.test.ts  usePatients.test.ts  validators.test.ts
app/src/components/: ErrorBoundary.tsx  ImportModal.tsx
app/src/contexts/: AuthContext.tsx
app/src/hooks/: useAuth.ts  (+18 more)
docs/: whatsapp-setup.md
scripts/: apply-migrations.sh  deploy-features.sh  push-asaas-secrets.sh  seed-superadmin.js
supabase/: config.toml  seed.sql  setup_full.sql
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 0001_initial_schema.sql  0002_patient_full_fields.sql  0003_auth_roles.sql  0004_super_admin.sql  0005_clinic_invites.sql  0006_clinic_field_config.sql  0007_appointment_room.sql  0008_patient_records.sql  0009_patient_self_book.sql  0010_clinic_onboarding.sql  0011_rooms_and_fees.sql  0012_asaas_billing.sql  0013_whatsapp.sql  0014_multi_clinic_professional.sql  0015_clinic_signup_requests.sql  0016_cpf_user_link.sql  0017_multi_role.sql  0018_patient_files.sql  0019_anamnesis.sql  0020_rls_security_fixes.sql
(+74 files in other folders)
