[package]
name = "clinica-tool"
version = "0.1.0"
description = "Clínica Tool — plataforma de gestão para pequenas clínicas brasileiras"
authors = ["pvsmartinez"]
edition = "2021"

[lib]
name = "clinica_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
